updated Galician, Indonesian, Irish and Korean translation

--- a/po/wesnoth-did/ga.po
+++ b/po/wesnoth-did/ga.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ga\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-05-19 14:19-0800\n"
+"POT-Creation-Date: 2011-10-17 23:28+0200\n"
+"PO-Revision-Date: 2011-09-14 14:33-0800\n"
 "Last-Translator: Carson Callis aka Mountian_King <tree_rings@rocketmail."
 "com>\n"
 "Language-Team: Irish <ga@li.org>\n"
@@ -25,7 +25,7 @@ msgstr ""
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:12
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:6
 msgid "Descent into Darkness"
-msgstr "Tuirlingt isteach i Dorchacht"
+msgstr "Tuirlingt i nDorchadas"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:13
@@ -65,7 +65,7 @@ msgstr "Sumnadóir"
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
 msgid "(Intermediate level, 12 scenarios.)"
-msgstr "(Leibhéal Meánach, 12 misin)"
+msgstr "(Leibhéal Meánach, 12 mhisin)"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
@@ -78,22 +78,22 @@ msgstr ""
 #. [about]
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:25
 msgid "Campaign Design"
-msgstr "Línitheoir Feachtas"
+msgstr "Línitheoir Feachtais"
 
 #. [about]
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:31
 msgid "Campaign Maintenance"
-msgstr "Coimeád Feachtas"
+msgstr "Cothabháil Fheachtais"
 
 #. [about]
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:41
 msgid "Artwork and Graphics Design"
-msgstr "Ealaín agus Ceapaim Grafacheach"
+msgstr "Ealaín agus Dearadh Grafaicí"
 
 #. [scenario]: id=01_Saving_Parthyn
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:6
 msgid "Saving Parthyn"
-msgstr "Sábháilte Parthyn"
+msgstr "Parthyn á Sábháilte"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:21
@@ -186,7 +186,7 @@ msgstr "Cosantóirí"
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:50
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:162
 msgid "Malin Keshar"
-msgstr "Málan Céisear"
+msgstr "Málan Céiser"
 
 #. [side]: type=Orcish Warlord, id=Gron'r Hronk
 #. [side]: type=Orcish Warlord, id=K'rrlar Oban
@@ -242,7 +242,7 @@ msgstr ""
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:147
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:580
 msgid "Death of Malin Keshar"
-msgstr "Bás ar Mhálain Céiseair"
+msgstr "Bás Mhálain Céiser"
 
 #. [objective]: condition=lose
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:156
@@ -439,7 +439,7 @@ msgstr "Tá na hoirc briste, nó marbh, nó theith."
 #. [scenario]: id=02_Peaceful_Valley
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:6
 msgid "Peaceful Valley"
-msgstr "Gleann Shámhach"
+msgstr "Gleann Sámhach"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:23
@@ -484,12 +484,12 @@ msgstr "Buaigh ar na bobodha go léir"
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:297
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:351
 msgid "Death of Darken Volk"
-msgstr "Bás Dhárchean Voilc"
+msgstr "Bás Dhárchain Volc"
 
 #. [unit]: id=Darken Volk, type=Dark Sorcerer DiD
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:107
 msgid "Darken Volk"
-msgstr "Dárchean Volc"
+msgstr "Dárchan Volc"
 
 #. [trait]: id=loyal
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:117
@@ -565,13 +565,13 @@ msgstr ""
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:276
 msgid "Rise, rise from the realms of death and decay!"
-msgstr ""
+msgstr "Éirígí, éirígí ó Tíortha na Marbh agus Meatha!"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:297
 #, fuzzy
 msgid "What are those things?"
-msgstr "Cé tusa mar sin? Cád tusa mar sin?"
+msgstr "Cád iad na rud sin?"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:301
@@ -655,10 +655,11 @@ msgstr "Gorac Cól"
 #. [side]
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:94
 msgid "Free Undead"
-msgstr "Neamh-mharbh Saor"
+msgstr "Neamh-mharbha Saor"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:119
+#, fuzzy
 msgid "Clear the cave of enemies"
 msgstr "Buachan ar rud"
 
@@ -719,7 +720,7 @@ msgstr ""
 #. [event]: type=Ghost side 4}
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:243
 msgid "Tortured Soul"
-msgstr "Anam Chráite"
+msgstr "Anam Cráite"
 
 #. [message]
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:249
@@ -758,7 +759,7 @@ msgstr ""
 #. [scenario]: id=04_Beginning_of_the_Revenge
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:6
 msgid "Beginning of the Revenge"
-msgstr "Tús Díoltas"
+msgstr "Tús an Dhíoltais"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:24
@@ -791,6 +792,7 @@ msgstr "K’rrlar Oban"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:111
+#, fuzzy
 msgid "Move Malin to the end of the mountain pass"
 msgstr "Téigh Málan go dti an ceann thuas den altán sléibhe"
 
@@ -798,7 +800,7 @@ msgstr "Téigh Málan go dti an ceann thuas den altán sléibhe"
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:116
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:166
 msgid "Kill the orc leaders"
-msgstr "Básaigh ar ceannfoirt oircheach"
+msgstr "Maraigh na ceannfoirt orcacha"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:153
@@ -841,7 +843,7 @@ msgstr ""
 #. [scenario]: id=05_Orc_War
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:6
 msgid "Orc War"
-msgstr "Cogadh a chur ar Oirc"
+msgstr "Cogadh Oirc"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:23
@@ -982,7 +984,7 @@ msgstr "Gardaí"
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:100
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:506
 msgid "Dela Keshar"
-msgstr "Déala Céisear"
+msgstr "Déala Céiser"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:131
@@ -999,9 +1001,8 @@ msgstr ""
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:185
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:186
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:187
-#, fuzzy
 msgid "River fort guard"
-msgstr "Ardgharda Abhac"
+msgstr "Garda abhann"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:196
@@ -1024,9 +1025,8 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:208
-#, fuzzy
 msgid "Silence from you."
-msgstr "Cárb as sìbh?"
+msgstr "Dún do bhéal."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:212
@@ -1139,7 +1139,7 @@ msgstr ""
 #. [scenario]: id=07_A_Small_Favor
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:6
 msgid "A Small Favor"
-msgstr "An Bá Beag"
+msgstr "Bá Beag"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:106
@@ -1227,12 +1227,12 @@ msgstr "Garda Geata"
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:278
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:285
 msgid "Head Trainer"
-msgstr ""
+msgstr "Traenálaí Cinn"
 
 #. [event]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:277
 msgid "Townperson"
-msgstr ""
+msgstr "Cathraitheoir"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:310
@@ -1260,7 +1260,7 @@ msgstr ""
 #. [message]: speaker=Taylor
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:345
 msgid "To arms, men!"
-msgstr "Faoi airm, a bhfir!"
+msgstr "Faoi airm, a fhir!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:386
@@ -1282,19 +1282,18 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:448
-#, fuzzy
 msgid "Here is the entrance! Hurry!"
-msgstr "Tá an moll airgid measctha anseo!"
+msgstr "Tá an bealach isteach anseo! Corraigh ort!"
 
 #. [scenario]: id=08_A_Small_Favor2
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:6
 msgid "A Small Favor — Part 2"
-msgstr "An Bá Beag — Paírt 2"
+msgstr "Bá Beag — Paírt 2"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:65
 msgid "Find the mage Lord Karres"
-msgstr "Faigh ar Asarlaí Tiarna Caires"
+msgstr "Faigh an Asarlaí Tiarna Caires"
 
 #. [unit]: type=Arch Mage, type=Great Mage, id=Lord Karres
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:121
@@ -1351,12 +1350,12 @@ msgstr ""
 #. [scenario]: id=09_A_Small_Favor3
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:6
 msgid "A Small Favor — Part 3"
-msgstr "An Bá Beag — Paírt 3"
+msgstr "Bá Beag — Paírt 3"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:84
 msgid "Find the book"
-msgstr "Faigh ar Leabhar"
+msgstr "Faigh an Leabhar"
 
 #. [event]
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:102
@@ -1424,9 +1423,8 @@ msgstr ""
 
 #. [scenario]: id=10_Alone_at_Last
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:6
-#, fuzzy
 msgid "Alone at Last"
-msgstr "Faoi dheaireadh! Tá ríshlat agam!"
+msgstr "Mé Féin faoi Dheireadh"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:23
@@ -1470,7 +1468,7 @@ msgstr ""
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:242
 msgid "Now give the book to me."
-msgstr ""
+msgstr "Tabhair an leabhar dom anois."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:246
@@ -1496,9 +1494,8 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:290
-#, fuzzy
 msgid "What do you mean?"
-msgstr "Cé tusa mar sin? Cád tusa mar sin?"
+msgstr "Cad é atá faoi sin agat?"
 
 #. [message]: role=advisor
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:294
@@ -1705,7 +1702,7 @@ msgstr "Dumdumbadúm"
 #. [message]: role=advisor
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:259
 msgid "Master, you are gravely injured!"
-msgstr ""
+msgstr "A mháistir, tá tú loite go forasta!"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:263
@@ -1717,7 +1714,7 @@ msgstr ""
 #. [message]: role=advisor
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:267
 msgid "There is another way, master. Remember the book..."
-msgstr ""
+msgstr "Bóthar eile atá ann, a mháistir. Cuimhnigh ar an leabhar..."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:271
@@ -1752,13 +1749,14 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:314
+#, fuzzy
 msgid "I’m ready. Do it."
-msgstr ""
+msgstr "Táim réidh."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:369
 msgid "There is darkness..."
-msgstr "Tá dorchas..."
+msgstr "Dorchadas..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:374
@@ -1787,7 +1785,7 @@ msgstr "Máthair le Folús"
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:401
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:32
 msgid "Mal Keshar"
-msgstr "Mál Céisear"
+msgstr "Mál Céiser"
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:417
@@ -1797,7 +1795,7 @@ msgstr "<big>AAAaaiiigghh!!</big>"
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:422
 msgid "The cold, it burns!"
-msgstr "An fuar, is dóiteann sé!!"
+msgstr "Dónn an fuar!"
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:426
@@ -1815,7 +1813,7 @@ msgstr "Ag do ghiollacht."
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:582
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:76
 msgid "Destruction of Mal Keshar"
-msgstr "Millteanas Mháil Céiseair"
+msgstr "Millteanas Mháil Céiser"
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:521
@@ -1861,7 +1859,7 @@ msgstr "<big>AAAaaaggghhhh!! ...</big>"
 #. [scenario]: id=12_Endless_Night
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:6
 msgid "Endless Night"
-msgstr "Oìche gan Chrìoch"
+msgstr "Oíche gan Chríoch"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:14
@@ -1882,7 +1880,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:72
 msgid "Defeat the foolish hero"
-msgstr "Buaigh ar héarós amaideach"
+msgstr "Buaigh ar an laoch amaideach"
 
 #. [unit]: type=Royal Guard, id=Foolish Hero
 #. [unit]: type=Assassin, id=Foolish Hero
@@ -1895,7 +1893,7 @@ msgstr "Buaigh ar héarós amaideach"
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:199
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:222
 msgid "Foolish Hero"
-msgstr "Héarós Amaideach"
+msgstr "Laoch Amaideach"
 
 #. [message]: speaker=Foolish Hero
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:280
@@ -2014,7 +2012,7 @@ msgstr ""
 #. [unit_type]: id=Apprentice Mage, race=human
 #: data/campaigns/Descent_Into_Darkness/units/apprentice-mage.cfg:4
 msgid "Apprentice Mage"
-msgstr "Asarlaí Printíseach"
+msgstr "Asarlaí Phrintísigh"
 
 #. [unit_type]: id=Apprentice Mage, race=human
 #: data/campaigns/Descent_Into_Darkness/units/apprentice-mage.cfg:19
@@ -2033,12 +2031,12 @@ msgstr "miodóg"
 #. [attack]: type=impact
 #: data/campaigns/Descent_Into_Darkness/units/apprentice-mage.cfg:33
 msgid "magic blast"
-msgstr "sinneán draíocht"
+msgstr "sinneán draíochta"
 
 #. [unit_type]: id=Apprentice Necromancer, race=human
 #: data/campaigns/Descent_Into_Darkness/units/apprentice-necromancer.cfg:4
 msgid "Apprentice Necromancer"
-msgstr "Marbhdhraíocht Printíseach"
+msgstr "Marbhdhraíocht Printísigh"
 
 #. [unit_type]: id=Apprentice Necromancer, race=human
 #: data/campaigns/Descent_Into_Darkness/units/apprentice-necromancer.cfg:18
@@ -2051,18 +2049,18 @@ msgstr ""
 #: data/campaigns/Descent_Into_Darkness/units/apprentice-necromancer.cfg:32
 #: data/campaigns/Descent_Into_Darkness/units/dark-mage.cfg:35
 msgid "chill wave"
-msgstr "tonn fuar"
+msgstr "tonn fhuar"
 
 #. [attack]: type=arcane
 #: data/campaigns/Descent_Into_Darkness/units/apprentice-necromancer.cfg:44
 #: data/campaigns/Descent_Into_Darkness/units/dark-mage.cfg:47
 msgid "shadow wave"
-msgstr "tonn scáth"
+msgstr "tonn scátha"
 
 #. [unit_type]: id=Dark Mage, race=human
 #: data/campaigns/Descent_Into_Darkness/units/dark-mage.cfg:4
 msgid "Dark Mage"
-msgstr "Asarlaí Dorchas"
+msgstr "Asarlaí Dhorchadais"
 
 #. [unit_type]: id=Dark Mage, race=human
 #: data/campaigns/Descent_Into_Darkness/units/dark-mage.cfg:18
@@ -2073,9 +2071,8 @@ msgstr ""
 
 #. [unit_type]: id=Frontier Baroness, race=human
 #: data/campaigns/Descent_Into_Darkness/units/frontier-baroness.cfg:6
-#, fuzzy
 msgid "female^Frontier Baroness"
-msgstr "Boghdóir Fásach"
+msgstr "Banbharún Teorann"
 
 #. [unit_type]: id=Frontier Baroness, race=human
 #: data/campaigns/Descent_Into_Darkness/units/frontier-baroness.cfg:24
@@ -2095,12 +2092,12 @@ msgstr "bachall"
 #. [attack]: type=impact
 #: data/campaigns/Descent_Into_Darkness/units/frontier-baroness.cfg:102
 msgid "sling"
-msgstr "cranntabhaill"
+msgstr "tabhall"
 
 #. [message]: speaker=unit
 #: data/campaigns/Descent_Into_Darkness/utils/deaths.cfg:12
 msgid "I’m not ready to die..."
-msgstr ""
+msgstr "Nílim réidh le bás a fháil..."
 
 #. [message]: speaker=unit
 #: data/campaigns/Descent_Into_Darkness/utils/deaths.cfg:28
