--- a/po/wesnoth-dw/gl.po
+++ b/po/wesnoth-dw/gl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-10-16 01:40+0200\n"
+"PO-Revision-Date: 2011-10-23 16:21+0200\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -12,6 +12,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -1799,12 +1800,6 @@ msgstr "O que? Non pode ser."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:209
-#, fuzzy
-#| msgid ""
-#| "When your grandfather married Indress, he he did not know that Tyegëa had "
-#| "already born him a son. When she delivered your father to Jotha, your "
-#| "grandmother Indress agreed to keep it secret and raise the infant as her "
-#| "own."
 msgid ""
 "When your grandfather married Indress, he did not know that Tyegëa had "
 "already born him a son. When she delivered your father to Jotha, your "
@@ -2981,10 +2976,8 @@ msgstr "cola"
 
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:198
-#, fuzzy
-#| msgid "stunned"
 msgid "female^stunned"
-msgstr "atordado"
+msgstr "atordada"
 
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:205
@@ -3235,9 +3228,6 @@ msgstr ""
 "regresaremos."
 
 #: data/campaigns/Dead_Water/utils/specials.cfg:4
-#, fuzzy
-#| msgid ""
-#| " This unit is able stun its enemies, disrupting their zones of control."
 msgid ""
 " This unit is able to stun its enemies, disrupting their zones of control."
 msgstr ""
@@ -3251,10 +3241,6 @@ msgstr "atorda"
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
-#, fuzzy
-#| msgid ""
-#| "This attack hits so hard that the defender is dazed and can no longer "
-#| "enforce a zone of control. The effect wears off on the defenders next turn"
 msgid ""
 "This attack hits so hard that the defender is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the defender’s next turn."
