--- a/po/wesnoth-lib/gl.po
+++ b/po/wesnoth-lib/gl.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-10-16 00:28+0200\n"
+"PO-Revision-Date: 2011-10-23 14:19+0200\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -23,6 +23,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -872,10 +873,8 @@ msgstr "Vila lamacenta"
 
 #. [terrain_type]: id=mermen-village
 #: data/core/terrain.cfg:1604
-#, fuzzy
-#| msgid "Swamp Merfolk Village"
 msgid "Merfolk Village"
-msgstr "Vila lamacenta dos sirénidos"
+msgstr "Vila dos sirénidos"
 
 #. [terrain_type]: id=village_overlay
 #: data/core/terrain.cfg:1619
@@ -2462,8 +2461,6 @@ msgid "Skip AI Moves"
 msgstr "Saltarse os movementos da intelixencia artificial."
 
 #: src/game_preferences_display.cpp:166
-#, fuzzy
-#| msgid "Interrupt move when an ally is sighted"
 msgid "Interrupt Move when an Ally is Sighted"
 msgstr "Interromper o movemento ao avistar un aliado."
 
@@ -2510,14 +2507,10 @@ msgid "Iconize Lobby List"
 msgstr "Empregar iconas na lista da sala de espera."
 
 #: src/game_preferences_display.cpp:176
-#, fuzzy
-#| msgid "Save password to preferences (clear text)"
 msgid "Save Password to Preferences (Plain Text)"
 msgstr "Gardar o contrasinal na configuración (en texto simple)."
 
 #: src/game_preferences_display.cpp:177
-#, fuzzy
-#| msgid "Set path to wesnothd"
 msgid "Set Path to wesnothd"
 msgstr "Establecer a ruta ao «wesnothd»"
 
@@ -2774,8 +2767,6 @@ msgid "Show messages about all players joining the multiplayer lobby"
 msgstr "Avisar cando se incorporen novos xogadores á sala de espera."
 
 #: src/game_preferences_display.cpp:382
-#, fuzzy
-#| msgid "Use new lobby interface"
 msgid "Use New Lobby Interface"
 msgstr "Empregar a nova interface da sala de espera."
 
