--- a/po/wesnoth-tutorial/id.po
+++ b/po/wesnoth-tutorial/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.2+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-08-09 16:49+0700\n"
+"PO-Revision-Date: 2011-10-24 14:17+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -337,8 +337,8 @@ msgid ""
 "female^Unfortunately, you’ve used up your turn attacking the quintain. The "
 "quintain now gets to attack."
 msgstr ""
-"perempuan^Sayang sekali, anda telah menggunakan giliran mu menyerang "
-"quintain itu. Kini quintain yang akan menyerang."
+"Sayang sekali, anda telah menggunakan giliran mu menyerang quintain itu. "
+"Kini quintain yang akan menyerang."
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:485
@@ -576,7 +576,7 @@ msgid ""
 "But before you send your fighters against the quintain, you should know they "
 "have two kinds of attack..."
 msgstr ""
-"Tetapi Sebelum Anda mengirim pasukanmu melawan quintain, terlebih dahulu "
+"Tetapi Sebelum anda mengirim pasukanmu melawan quintain, terlebih dahulu "
 "anda harus mengetahui bahwa ada dua jenis serangan..."
 
 #. [message]: id=student
@@ -1137,7 +1137,7 @@ msgid ""
 "gain more experience, rather than recruiting new Fighters."
 msgstr ""
 "Selama pelatihan mu, baik $recall_name1 and $recall_name2 mendapatkan "
-"$recall_xp1 point pengalaman. Kamu perlu <i>memanggil kembali</i> mereka "
+"$recall_xp1 poin pengalaman. Kamu perlu <i>memanggil kembali</i> mereka "
 "sekarang sehingga mereka dapat memperoleh lebih banyak pengalaman, daripada "
 "merekrut Petarung-Petarung baru."
 
@@ -1451,7 +1451,7 @@ msgstr "Serang orc itu dengan Pemanah"
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:982
 msgid "<big>Unit Summaries</big>"
-msgstr "<big>Ringkasan Unit</ big>"
+msgstr "<big>Ringkasan Unit</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:983
@@ -1713,12 +1713,6 @@ msgstr "<big>Waktu Hari</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1227
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "After this dialog, hold the mouse over the landscape image above the "
-#| "minimap on the right. This brings up a description of the time of day, "
-#| "showing who has the advantage."
 msgid ""
 "\n"
 "After this dialog, hold the mouse over the landscape image below the minimap "
@@ -1726,9 +1720,9 @@ msgid ""
 "has the advantage."
 msgstr ""
 "\n"
-"Setelah dialog ini, tahan mouse di atas gambar pemandangan di atas minimap "
-"pada sisi kanan. Ini mengemukakan sebuah penjelasan waktu hari, menunjukkan "
-"siapa yang memiliki keuntungan."
+"Setelah dialog ini, tahan mouse di atas gambar pemandangan di bawah peta "
+"mini pada sisi kanan. Ini mengemukakan sebuah penjelasan waktu hari, "
+"menunjukkan siapa yang memiliki keuntungan."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1234
@@ -1966,7 +1960,7 @@ msgid ""
 "I always have a 60% chance of hitting with my <i>Marksman</i> ability, and I "
 "deal 9 damage each for 4 attacks. Use me to dislodge hard-to-hit units."
 msgstr ""
-"perempuan^Meningkat satu level telah sepenuhnya menyembuhkanku!\n"
+"Meningkat satu level telah sepenuhnya menyembuhkanku!\n"
 "Aku selalu mempunyai 60% kesempatan menyerang dengan keahlian <i>Menembakku</"
 "i>, dan aku dapat menyebabkan 9 kerusakan masing-masing untuk 4 kali "
 "serangan. Gunakan aku untuk memburu musuh-musuh yang sulit diserang."
